Disallow partial results when shard unavailable
Searching with `allowPartialSearchResults=false` could still return
partial search results during recovery. If the last shard copy fails
with a "shard not available" exception, the failure would be ignored and
a partial result returned. The one case where this is known to happen
is when the last shard copy is recovering when searching, since
`IllegalIndexShardStateException` is considered a "shard not available"
exception.

Relates to #42612